--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "keywords": [
     "Firebase",
-    "Point-in-time recovery",
+    "vector search",
+    "search",
+    "embeddings",
     "Typesaurus"
   ],
   "author": "Sasha Koss <koss@nocorp.me>",
